[tool.poetry]
name = "greenatom_tests"
version = "0.1.0"
description = ""
authors = ["Bazarovinc"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.25"
alembic = "^1.7.4"
uvicorn = "^0.15.0"
python-multipart = "^0.0.5"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
